// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders 1`] = `
<div>
  <div
    class="sticker sticker-root sticker-static avatar-root sticker-rounded sticker-chartRed"
  >
    FB
  </div>
</div>
`;

exports[`Avatar renders with an image 1`] = `
<div>
  <div
    class="sticker sticker-root sticker-static avatar-root sticker-rounded sticker-chartRed"
    style="background-image: url(http://i.imgur.com/G5pfP.jpg);"
  />
</div>
`;
